# conway-technical

./: .gitignore  README.md  intructions.md
back-end/: database.py  main.py  model.py  pyproject.toml
front-end/: package-lock.json  package.json
front-end/src/app/: page.tsx
front-end/src/app/api/mock-data/: route.ts
front-end/src/app/dataset/[id]/: page.tsx
front-end/src/components/: anomaly-detection.tsx  data-charts.tsx  data-map.tsx  data-table.tsx  file-upload.tsx
front-end/src/config/: env.ts
front-end/src/lib/: api-client.ts  api-types.ts
